# docker-crewai

crewai-project-master/: README.md  docker-compose.yml
crewai-project-master/crewai_be/: Dockerfile  agents.py  analysecrew.py  api.py  api_test.py  company_agents.py  company_tasks.py  crew.py  database_model.py  global_config.py  industry_agents.py  industry_tasks.py  macroeconomic_agents.py  macroeconomic_tasks.py  models.py  pyproject.toml  tasks.py  trip_agents.py  trip_tasks.py
crewai-project-master/crewai_be/tools/: KOS_search.py  browser_tools.py  scraprGraph.py  search_one_website.py  search_tools.py
crewai-project-master/db/: Dockerfile  crewai.sql
crewai-project-master/nextjs_app/: Dockerfile  package-lock.json  package.json
crewai-project-master/nextjs_app/app/: layout.tsx  metadata.ts  page.tsx
crewai-project-master/nextjs_app/app/page1/: page.tsx
crewai-project-master/nextjs_app/app/page2/: page.tsx
crewai-project-master/nextjs_app/app/page3/: page.tsx
crewai-project-master/nextjs_app/components/: EventLog.tsx  FinalOutput.tsx  FinalOutput2.tsx  Header.tsx  InputSection.tsx  JobRecords.tsx  JobSelector.tsx  ModelSelector.tsx  Sidebar.tsx  TipEditor.tsx  TipEditor1.tsx  TipEditor2.tsx  TipEditor3.tsx
crewai-project-master/nextjs_app/hooks/: useCrewJob.tsx
